--- a/src/main/resources/templates/book/cart.html
+++ b/src/main/resources/templates/book/cart.html
@@ -117,7 +117,7 @@
                            class="form-control quantity">
                 </label>
             </td>
-            <td th:text="${item.getPrice()}"></td>
+            <td class="price" th:text="${item.getPrice()}"></td>
             <td th:text="${item.getPrice() * item.getQuantity()}"></td>
             <td>
                 <a class="btn btn-danger"
@@ -152,16 +152,222 @@
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script th:src="@{/js/cart.js}"></script>
 <script>
+    // Function to update total price
+    function updateTotalPrice() {
+        var total = 0;
+        var quantityInputs = document.getElementsByClassName("quantity");
+        var prices = document.getElementsByClassName("price");
+
+        for (var i = 0; i < quantityInputs.length; i++) {
+            var quantity = parseInt(quantityInputs[i].value);
+            var price = parseFloat(prices[i].textContent);
+
+            total += quantity * price;
+        }
+
+        document.getElementById("cartTotal").textContent = total.toFixed(2);
+    }
+
+    // Attach event listeners to quantity inputs
+    var quantityInputs = document.getElementsByClassName("quantity");
+    for (var i = 0; i < quantityInputs.length; i++) {
+        quantityInputs[i].addEventListener("change", function() {
+            updateTotalPrice();
+        });
+    }
+
+    // Checkout button event handler
     document.getElementById("checkoutButton").addEventListener("click", function() {
         var total = document.getElementById("cartTotal").textContent;
-        var message = "Thanks for your order. Total amount to be paid: " + total;
+        var message = "Thanks for your order." + "<br>Total amount to be paid: " + total;
 
         Swal.fire({
             title: "Thanks for your order!",
-            text: message,
+            html: message,
             icon: "success",
             confirmButtonText: "OK"
         });
+
     });
 </script>
+</body>
+</html>
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org" lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <title>Cart</title>-->
+<!--    <th:block th:replace="~{layout::link-css}"></th:block>-->
+<!--    <th:block th:replace="~{layout::custom-css}"></th:block>-->
+<!--    <style>-->
+<!--        .notification {-->
+<!--            background-color: #f8d7da;-->
+<!--            color: #721c24;-->
+<!--            padding: 10px;-->
+<!--            border-radius: 5px;-->
+<!--            margin-bottom: 10px;-->
+<!--        }-->
+<!--    </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<th:block th:replace="~{layout::header}"></th:block>-->
+<!--<div class="container" th:if="${not #lists.isEmpty(cart.cartItems)}">-->
+<!--    <table class="table">-->
+<!--        <thead>-->
+<!--        <tr>-->
+<!--            <th scope="col">Book ID</th>-->
+<!--            <th scope="col">Book Name</th>-->
+<!--            <th scope="col">Quantity</th>-->
+<!--            <th scope="col">Price</th>-->
+<!--            <th scope="col">Total</th>-->
+<!--            <th scope="col">Action</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <tr th:each="item : ${cart.cartItems}">-->
+<!--            <td th:text="${item.getBookId()}"></td>-->
+<!--            <td th:text="${item.getBookName()}"></td>-->
+<!--            <td>-->
+<!--                <label>-->
+<!--                    <input type="number" min="1"-->
+<!--                           th:value="${item.getQuantity()}"-->
+<!--                           th:attr="data-id=${item.getBookId()}"-->
+<!--                           class="form-control quantity" onchange="updateTotal(this, ${item.getPrice()})">-->
+<!--                </label>-->
+<!--            </td>-->
+<!--            <td th:text="${item.getPrice()}"></td>-->
+<!--            <td th:text="${item.getPrice() * item.getQuantity()}" class="item-total"></td>-->
+<!--            <td>-->
+<!--                <a class="btn btn-danger"-->
+<!--                   th:href="@{/cart/removeFromCart/{id}(id=${item.getBookId()})}">-->
+<!--                    Remove-->
+<!--                </a>-->
+<!--            </td>-->
+<!--        </tr>-->
+<!--        </tbody>-->
+<!--    </table>-->
+<!--    <div class="row">-->
+<!--        <div class="col-md-12">-->
+<!--            <h3>Total: <span id="cartTotal" th:text="${totalPrice}"></span></h3>-->
+<!--        </div>-->
+<!--        <div class="col-md-12 text-center">-->
+<!--            <a class="btn btn-success" id="checkoutButton" href="#">Checkout</a>-->
+<!--            <a class="btn btn-danger" th:href="@{/cart/clearCart}">Clear Cart</a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="container" th:if="${#lists.isEmpty(cart.cartItems)}">-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-md-6 offset-md-3 text-center">-->
+<!--                <h3 class="mt-5">Your cart is empty</h3>-->
+<!--                <p class="lead">Please add some books to your cart</p>-->
+<!--                <br>-->
+<!--                <a class="btn btn-primary" href="/books">Go to list book</a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<th:block th:replace="~{layout::footer}"></th:block>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>-->
+<!--<script>-->
+
+<!--    document.getElementById("checkoutButton").addEventListener("click", function() {-->
+<!--        var total = document.getElementById("cartTotal").textContent;-->
+<!--        var message = "Thanks for your order.\nTotal amount to be paid: " + total;-->
+
+<!--        Swal.fire({-->
+<!--            title: "Thanks for your order!",-->
+<!--            text: message,-->
+<!--            icon: "success",-->
+<!--            confirmButtonText: "OK",-->
+<!--            customClass: {-->
+<!--                content: 'pre-line'-->
+<!--            }-->
+<!--        });-->
+<!--    });-->
+
+<!--    // Function to update the cart and total price-->
+<!--    function updateCart(id, quantity) {-->
+<!--        $.ajax({-->
+<!--            url: "/cart/updateCart/" + id + "/" + quantity,-->
+<!--            type: "GET",-->
+<!--            success: function() {-->
+<!--                // Update the total price-->
+<!--                $.ajax({-->
+<!--                    url: "/cart/totalPrice",-->
+<!--                    type: "GET",-->
+<!--                    success: function(totalPrice) {-->
+<!--                        $("#cartTotal").text(totalPrice.toFixed(2));-->
+<!--                    }-->
+<!--                });-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
+
+<!--    // Function to remove an item from the cart-->
+<!--    function removeFromCart(id) {-->
+<!--        $.ajax({-->
+<!--            url: "/cart/removeFromCart/" + id,-->
+<!--            type: "GET",-->
+<!--            success: function() {-->
+<!--                // Update the total price-->
+<!--                $.ajax({-->
+<!--                    url: "/cart/totalPrice",-->
+<!--                    type: "GET",-->
+<!--                    success: function(totalPrice) {-->
+<!--                        $("#cartTotal").text(totalPrice.toFixed(2));-->
+<!--                    }-->
+<!--                });-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
+
+<!--    // Function to clear the cart-->
+<!--    function clearCart() {-->
+<!--        $.ajax({-->
+<!--            url: "/cart/clearCart",-->
+<!--            type: "GET",-->
+<!--            success: function() {-->
+<!--                // Update the total price-->
+<!--                $.ajax({-->
+<!--                    url: "/cart/totalPrice",-->
+<!--                    type: "GET",-->
+<!--                    success: function(totalPrice) {-->
+<!--                        $("#cartTotal").text(totalPrice.toFixed(2));-->
+<!--                    }-->
+<!--                });-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
+
+<!--    // Function to checkout the cart-->
+<!--    function checkout() {-->
+<!--        $.ajax({-->
+<!--            url: "/cart/checkout",-->
+<!--            type: "GET",-->
+<!--            success: function() {-->
+<!--                // Update the total price-->
+<!--                $.ajax({-->
+<!--                    url: "/cart/totalPrice",-->
+<!--                    type: "GET",-->
+<!--                    success: function(totalPrice) {-->
+<!--                        $("#cartTotal").text(totalPrice.toFixed(2));-->
+<!--                    }-->
+<!--                });-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
+
+
+<!--</script>-->
+<!--</body>-->
+<!--</html>-->
+
