--- a/src/main/resources/templates/book/chat.html
+++ b/src/main/resources/templates/book/chat.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initialscale=1.0">
   <title>Chat</title>
   <link rel="stylesheet" th:href="@{/css/chat.css}"/>
   <th:block th:replace="~{layout::link-css}"></th:block>
@@ -11,12 +11,11 @@
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
-
 <noscript>
-  <h2>Seems your browser doesn't support Javascript! Websocket relies on Javascript being enabled. Please enable
+  <h2>Seems your browser doesn't support Javascript! Websocket relies
+    on Javascript being enabled. Please enable
     Javascript and reload this page!</h2>
 </noscript>
-
 <div id="username-page">
   <div class="username-page-container">
     <form id="usernameForm" name="usernameForm">
@@ -33,14 +32,14 @@
       <div class="form-group">
         <button type="submit" class="btn-danger">Go</button>
       </div>
+      <div id="timeInfo"></div>
     </form>
   </div>
 </div>
-
 <div id="chat-page" class="hidden">
   <div class="chat-container">
     <div class="chat-header">
-      <h2>HUTECH CHAT</h2>
+      <h2>CHAT</h2>
     </div>
     <ul id="messageArea"></ul>
     <form id="messageForm" name="messageForm">
@@ -60,8 +59,19 @@
   </div>
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
-<script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js}"></script>
-<script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}"></script>
-<script th:src="@{/js/chat.js}"></script>
+<script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/sockjsclient/1.6.1/sockjs.min.js}"></script>
+<script
+        th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.m
+in.js}"></script>
+<script th:src="@{/js/chat.js}">
+  // Lấy thời gian hiện tại
+  const currentTime = new Date();
+  // Định dạng thời gian
+  const formattedTime = currentTime.toLocaleTimeString();
+  // Hiển thị thông tin thời gian trên giao diện
+  document.querySelector('#timeInfo').textContent = `Logged in at: ${formattedTime}`;
+</script>
+
+
 </body>
 </html>
