--- a/src/main/resources/templates/book/cart.html
+++ b/src/main/resources/templates/book/cart.html
@@ -89,6 +89,11 @@
             border-radius: 5px;
             margin-bottom: 10px;
         }
+       .thead {
+           color: yellow;
+       }
+       .tbody {
+           color: lightgray;}
     </style>
 </head>
 <body>
